maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:63: error: not found: value h
    if (y == h-1)
             ^